<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="home.amml.multi.concesionario_amml.view.MainActivity"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_compartir_menu"
            android:icon="@drawable/share_svgrepo_com"
            android:title="@string/item_Compartir_Menu"
            app:showAsAction="always"/>
        <item
            android:id="@+id/item_buscar_menu"
            android:icon="@drawable/search_svg"
            android:title="@string/item_Buscar_Menu" />
        <item
            android:id="@+id/item_favoritos_menu"
            android:icon="@drawable/star_svgrepo_com"
            android:title="@string/item_Favoritos_Menu" />
        <item
            android:id="@+id/item_notificaciones_menu"
            android:icon="@drawable/notification_svg"
            android:title="@string/item_Notificaciones_Menu" />
    </group>
</menu>